--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^2.22.0-alpha.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "graphql": "^15.8.0",
     "nodemon": "^2.0.19"
   }
 }
